# feathericons-rs

./: Cargo.toml  LICENSE  build.rs
feathericons-codegen/: Cargo.toml
feathericons-codegen/src/: lib.rs
seed-feathericons-codegen/: Cargo.toml
seed-feathericons-codegen/src/: lib.rs
src/: lib.rs  main.rs
