[package]
name = "seed-feathericons"
version = "0.1.0"
authors = [ "power-fungus <samuel.pilz@posteo.net>" ]
edition = "2018"

[dependencies]
seed-feathericons-codegen = {path = "seed-feathericons-codegen"}
regex = "1.3" # TODO: remove

[build-dependencies]
reqwest = { version = "0.10", features = ["blocking"] }

[workspace]
members = [".", "seed-feathericons-codegen"]