[package]
name = "feathericons-codegen"
version = "0.1.0"
authors = ["power-fungus <samuel.pilz@posteo.net>"]
edition = "2018"

[dependencies]
quote = "1.0.2"
proc-macro2 = { version = "1.0.1" }
syn = { version = "1.0.3", features = ["full", "extra-traits", "fold"] }
regex = "1.3"

[lib]
proc_macro = true
